<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

    <!-- Header -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/addEditHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="ADD"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Close Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/inputCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Date of Purchase -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:hint="Date of Purchase"
                app:endIconDrawable="@drawable/calendar_month"
                app:endIconMode="custom"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Brief Description -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Brief Description"
                app:endIconDrawable="@drawable/photo_camera"
                app:endIconMode="custom"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Make and Model section -->
            <LinearLayout
                android:id="@+id/makeModelSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/makeInputLayout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:hint="Make"
                    app:hintEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/makeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/modelInputLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:hint="Model"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/modelInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
            <!-- Serial Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/serialNumberInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Serial Number"
                app:endIconDrawable="@drawable/photo_camera"
                app:endIconMode="custom"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/serialNumberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Estimated Value -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/valueInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Estimated Value"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/valueInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <!-- Comments -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commentInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="Comments"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commentInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextViewWithIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/tag"
                android:drawablePadding="8dp"
                android:text="Select Tags To Apply"
                android:layout_gravity="center"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tagChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <!-- Chips will be added here dynamically -->
            </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>
            <!-- Create Tag Button with Icon -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/AddTagButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableRight="@drawable/tag"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:text="@string/create_new_tag_placeholder"
                app:backgroundTint="#888A9A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsCardView" />
            <!-- Create Tag Button with Icon -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/AddImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:drawableRight="@drawable/photo_camera"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="Add Photo"
                app:backgroundTint="#888A9A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AddTagButton"/>
</LinearLayout>
    </com.google.android.material.card.MaterialCardView>

<com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCardView" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>