<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="search"
        android:contentDescription=""
        app:showAsAction="ifRoom"
        android:visible="false"
        android:enabled="false"/>
    <item
        android:id="@+id/bulk_delete"
        android:icon="@drawable/delete_24px"
        android:title="search"
        android:contentDescription=""
        android:visible="false"
        android:enabled="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bulk_tag"
        android:icon="@drawable/tag_24px"
        android:title="search"
        android:contentDescription=""
        android:visible="false"
        android:enabled="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_apply"
        android:title="Apply"
        app:showAsAction="always"
        android:visible="false"
        android:enabled="false"/>

    <item
        android:id="@+id/action_reset"
        android:title="Reset"
        app:showAsAction="always"
        android:visible="false"
        android:enabled="false"/>

    <item
        android:id="@+id/close_bulk_select"
        android:icon="@drawable/close_24px"
        android:title="search"
        android:contentDescription=""
        android:visible="false"
        android:enabled="false"
        app:showAsAction="ifRoom"/>

</menu>
