...
        </com.google.android.material.chip.ChipGroup>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
